frontend: now thumbnails in the 'thumb' view mode are correctly centered and shown in their entirety; before, thumbnails would be resized on screen to a width of 48px and the height, when larger, was clipped. Now all images as centered, both horizontally and vertically, in the space alloted them (48x48 pixels)

--- a/Assets/Css/FileManager.css
+++ b/Assets/Css/FileManager.css
@@ -279,14 +279,45 @@ div.filemanager-container span.fi span, div.filemanager-container span.thumb {
   overflow: hidden;
 }
 
+/* forcing the text to center: see comment below where we vcenter the image */
 div.filemanager-container span.thumb span {
-  margin-top: 14px;
+  /* margin-top: 14px; */
+  vertical-align: middle;
+  display: table-cell;
 }
 
-div.filemanager-container span.thumb img.thumb {
+/*
+ * Have the image (thumbnail) centered as well: 
+ *
+ * After several failed attempts it is now based on 
+ *    http://www.brunildo.org/test/img_center.html
+ * 
+ * Note that you cannot mix 'float:left' and 'display-table-cell'
+ * in the same element. That is why the text following the image 
+ * MUST be 'display: table-cell' as well, for otherwise it would 
+ * not display on the same line. 
+ * And because the text is now it's own 'table-cell' it also needs
+ * its own 'vertical-align:middle' replacing the brute-force 
+ * margin-top downshift.
+ */
+div.filemanager-container span.thumb span.thumb {
+  float: none;
   width: 48px;
-  height: auto; 
+  height: 48px; 
+  vertical-align: middle;
+  text-align: center;
+  display: table-cell;
+  margin: 0;    /* superfluous as it's a 'table-cell' display now: the margin is neglected, so we move the right-side gap to the padding. */
+  padding: 0 5px 0 0;
 }
+div.filemanager-container span.thumb span.thumb img {
+  float: none;
+  vertical-align: middle;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 
 div.filemanager-container span.drag span, div.filemanager-engine-trident4 ul li span.fi span, div.filemanager-engine-trident5 ul li span.fi span, div.filemanager-engine-presto ul li span.fi span, div.filemanager ul li:hover span.fi span {
   overflow: hidden;
@@ -324,10 +355,14 @@ div.filemanager-container span.fi img {
 
 }
 
+/*
+obsoleted by the new centering code. At least that one works by centering the image instead of clipping them while forcing width=48px. 
+
 div.filemanager-container span.thumb img {
   float: left;
   margin: 0 5px 0 0;
 }
+*/
 
 div.filemanager-container span.file img {
   border:none;
@@ -337,6 +372,7 @@ div.filemanager-container span.file img {
 div.filemanager-container span.fi img.browser-icon {
   float: right;
   border:none;
+  margin-top: 16px; /* vertically center the little buggers */
 }
 
 div.filemanager-container span.move img.browser-icon {
